<resources>
    <string name="app_name">sourcecodeplataform</string>
    <string name="action_settings">Settings</string>
    <string name="btentrar">Entrar</string>
    <string name="btlistarTodos">Listar Usuarios</string>
    <string name="btlistarParam">Procurar Usuario</string>
    <string name="btlistarTodosPr">Listar Projetos</string>
    <string name="btlistarTodosUsuPr">Listar Usuario-Projetos</string>
    <string name="btlistarParamPr">Procurar Projetos</string>
    <string name="btlistarParamUsuPr">Procurar Usuario-Projetos</string>
    <string name="btpesquisar">Pesquisar</string>
    <string name="btinserir">Inserir</string>
    <string name="btalterar">Alterar</string>
    <string name="btexcluir">Excluir</string>
    <string name="btnovousu">Novo Usuario</string>
    <string name="btnovopr">Novo Projeto</string>
    <string name="btnovousupr">Novo Usuario-Projeto</string>
    <string name="btsalvar">Salvar</string>
    <string name="lbid">Id</string>
    <string name="lblname">Nome</string>
    <string name="lblemail">Email</string>
    <string name="lblpassword">Senha</string>
    <string name="lbltype">Tipo</string>
    <string name="lbusuariologado">UsuLog</string>
     <string name="lbldesc">Descrição</string>
     <string name="lblfilename">Caminho do arquivo</string>
    <string name="lblscm">Tipo de controle de versão</string>
    <string name="lblidusuario">ID do usuário</string>
    <string name="lblidprojeto">ID do projeto</string>
    <string name="toogleisoweneron">É o dono do projeto\t (x)</string>
    <string name="toogleisoweneroff">É o dono do projeto\t ( )</string>
    <string name="title_activity_add_usu">AddUsuActivity</string>
    <string name="title_activity_add_pr">AddPrActivity</string>
    <string name="title_activity_add_usupr">AddUsuPrActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_list_usu">ListUsuActivity</string>
    <string name="title_activity_list_pr">ListPrActivity</string>
    <string name="title_activity_list_usupr">ListUsuPrActivity</string>
    <string name="title_activity_upt_usu">UptUsuActivity</string>
    <string name="title_activity_upt_pr">UptPrActivity</string>
    <string name="title_activity_upt_usupr">UptUsuPrActivity</string>
    <string name="title_activity_list_usu_param">ListUsuParamActivity</string>
    <string name="title_activity_list_pr_param">ListPrParamActivity</string>
    <string name="title_activity_list_usupr_param">ListUsuPrParamActivity</string>
</resources>
