<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lbUsuLogado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbusuariologado"/>

    <Button
        android:id="@+id/btlistusu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btlistarTodos" />

    <Button
        android:id="@+id/btlistusuParam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btlistarParam" />

    <Button
        android:id = "@+id/btnovousu"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btnovousu" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/btlistpr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btlistarTodosPr" />

    <Button
        android:id="@+id/btlistprParam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btlistarParamPr" />

    <Button
        android:id = "@+id/btnovopr"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btnovopr" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/btlistusupr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btlistarTodosUsuPr" />

    <Button
        android:id="@+id/btlistusuprParam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btlistarParamUsuPr" />

    <Button
        android:id = "@+id/btnovousupr"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btnovousupr" />

</LinearLayout>
