<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblidusuario"/>
    <EditText
        android:id = "@+id/idusuario"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblidprojeto"/>
    <EditText
        android:id = "@+id/idprojeto"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <ToggleButton
        android:id="@+id/isowner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/toogleisoweneron"
        android:textOff="@string/toogleisoweneroff" />

    <Button
        android:id = "@+id/btalterar"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btalterar" />
    <Button
        android:id = "@+id/btexcluir"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btexcluir" />

</LinearLayout>
