<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblname"/>
    <EditText
        android:id = "@+id/name"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbldesc"/>
    <EditText
        android:id = "@+id/desc"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblfilename"/>
    <EditText
        android:id = "@+id/filepath"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblscm"/>
    <EditText
        android:id = "@+id/scm"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
        
    <Button
        android:id = "@+id/btalterar"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btalterar" />
    <Button
        android:id = "@+id/btexcluir"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btexcluir" />

</LinearLayout>
