<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ToggleButton
        android:id="@+id/isowner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/toogleisoweneron"
        android:textOff="@string/toogleisoweneroff" />
    <Button
        android:id = "@+id/btpesquisar"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btpesquisar" />
    <ListView
        android:id="@+id/listausupr"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>